<resources>
    <!-- DashboardActivity Buttons text-->
    <string name="app_name" translatable="false">Seminar3</string>
    <string name="text_get_quotations">Get quotations</string>
    <string name="text_favourite_quotations">Favourite quotations</string>
    <string name="text_settings">Settings</string>
    <string name="text_about">About</string>

    <!--FavouriteActivity stuff-->
    <string name="button_about_author">About Author</string>
    <string name="search_uri">http://en.wikipedia.org/wiki/Special:Search?search=</string>
    <string name="remove_alert_question">Are you sure that you want to remove this quotation?</string>
    <string name="remove_alert_yes">Yes, I do</string>
    <string name="remove_alert_no">No, I don\'t</string>
    <string name="remove_alert_title">Remove Quotation</string>
    <string name="clear_all">Clear All</string>
    <string name="random_option">Random Option</string>
    <string name="clear_all_confirmation">Are you sure that you want to delete ALL your favourite quotations?</string>

    <!--Activity tags-->
    <string name="tag_quotation_shake">Quotation Shake</string>
    <string name="tag_random_quotations">Random quotations</string>
    <string name="tag_favourite_quotations">Favourite quotations</string>
    <string name="tag_get_quotations">Get quotations</string>
    <string name="tag_settings">Settings</string>
    <string name="tag_about">About</string>

    <string name="text_tag_quotation_shake">Quotation Shake by
\n\nJimmy &amp; Rick\n\nRandom Chill Place\n\n2018
    Quotation Shake by
\n\nJimmy &amp; Rick\n\nRandom Chill Place\n\n2018
    Quotation Shake by
\n\nJimmy &amp; Rick\n\nRandom Chill Place\n\n2018
    Quotation Shake by
\n\nJimmy &amp; Rick\n\nRandom Chill Place\n\n2018
    Quotation Shake by
\n\nJimmy &amp; Rick\n\nRandom Chill Place\n\n2018</string>


    <!--SettingsActivity texts-->
    <string name="text_view_user_name">User Name</string>
    <string name="edit_text_user_name">Insert your name</string>
    <string name="text_view_quotations_language">Quotations language</string>
    <string name="text_view_requests_method">Web requests HTTP method</string>
    <string name="database_access_title">Database access method</string>
    <string name="method_get" translatable="false">GET</string>
    <string name="method_post" translatable="false">POST</string>
    <string name="english_language">English</string>
    <string name="russian_language">Russian</string>
    <string name="database_sqlhelper_text" translatable="false">SQLiteOpenHelper</string>
    <string name="database_room_text" translatable="false">Room</string>
    <string name="english_language_id" translatable="false">0</string>
    <string name="russian_language_id" translatable="false">1</string>
    <string name="web_service_get_id" translatable="false">0</string>
    <string name="web_service_post_id" translatable="false">1</string>
    <string name="database_sqlhelper_id" translatable="false">0</string>
    <string name="database_room_id" translatable="false">1</string>


    <!--QuotationActivity texts-->
    <string name="text_view_refresh_info">Hello %1s!\nPress \'Refresh\' to get a new quotation</string>
    <string name="text_view_sample_quotation">This is quotation %1s!</string>
    <string name="text_view_sample_author">This is author %1s</string>
    <string name="menu_button_add">Add</string>
    <string name="menu_button_refresh">Refresh</string>
    <string name="nameless">Nameless One</string>

    <!-- Common. No translation needed -->
    <string name="shared_preferences_username">username</string>
    <string name="title_activity_settings">Settings</string>


</resources>
